+ Add voucher API (#62)
