# swagger/yaml/modmod.yaml
@@ -358,6 +358,36 @@ paths:
           description: The item you are looking for cannot be found
           schema:
             $ref: '#/definitions/ErrorItemNotFound'
+  /v1/voucher/redeem/{voucher_code}:
+    post:
+      summary: Redeem a voucher
+      parameters:
+      - name: voucher_code
+        in: path
+        description: The code of the voucher
+        requireD: true
+        type: string
+      tags:
+      - User
+      responses:
+        200:
+          description: Upgrade membership
+          schema:
+            properties:
+              user:
+                $ref: '#/definitions/User'
+              message:
+                type: string
+              code:
+                type: integer
+        400:
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ErrorInvalid'
+        401:
+          description: You have to login to view this item
+          schema:
+            $ref: '#/definitions/ErrorLoginIsNeeded'
   /user/search/{prefix}:
     get:
       summary: Search user
